Add new Use-Cases and comments